--- a/_includes/practice/p_ex1.html
+++ b/_includes/practice/p_ex1.html
@@ -135,7 +135,7 @@ Response: 200 OK
             </tr>
             <tr>
                 <td>userId</td>
-                <td>integer</td>
+                <td>Integer</td>
                 <td>Yes</td>
                 <td>Unique identifier of the user</td>
             </tr>
